--- a/glide.yaml
+++ b/glide.yaml
@@ -181,3 +181,5 @@ import:
   version: 1ea25387ff6f684839d82767c1733ff4d4d15d0a
 - package: github.com/grpc-ecosystem/go-grpc-prometheus
   version: 6b7015e65d366bf3f19b2b2a000a831940f0f7e0
+- package: github.com/bmatsuo/lmdb-go
+  version: a14b5a390eff52e52a20eceb3020038b3d291432
