--- a/dumpling/glide.yaml
+++ b/dumpling/glide.yaml
@@ -15,6 +15,7 @@ import:
   - mvcc/mvccpb
   - pkg/tlsutil
   - pkg/monotime
+  - contrib/recipes
 - package: github.com/gengo/grpc-gateway
   version: f52d055dc48aec25854ed7d31862f78913cf17d1
   subpackages:
