--- a/glide.yaml
+++ b/glide.yaml
@@ -196,3 +196,5 @@ import:
   version: 1ea25387ff6f684839d82767c1733ff4d4d15d0a
 - package: github.com/grpc-ecosystem/go-grpc-prometheus
   version: 6b7015e65d366bf3f19b2b2a000a831940f0f7e0
+- package: github.com/spaolacci/murmur3
+  version: v1.0
