--- a/errors.toml
+++ b/errors.toml
@@ -1458,7 +1458,7 @@ The password hash doesn't have the expected format. Check if the correct passwor
 
 ["executor:3008"]
 error = '''
-Foreign key cascade delete/update exceeds max depth of 15.
+Foreign key cascade delete/update exceeds max depth of %v.
 '''
 
 ["executor:3523"]
