extension: support bootstrap for extension

--- a/extension/BUILD.bazel
+++ b/extension/BUILD.bazel
@@ -12,18 +12,26 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//sessionctx/variable",
+        "//util/chunk",
         "@com_github_pingcap_errors//:errors",
     ],
 )
 
 go_test(
     name = "extension_test",
-    srcs = ["registry_test.go"],
+    srcs = [
+        "bootstrap_test.go",
+        "main_test.go",
+        "registry_test.go",
+    ],
+    embed = [":extension"],
     deps = [
-        ":extension",
         "//privilege/privileges",
         "//sessionctx/variable",
+        "//testkit",
+        "//testkit/testsetup",
         "@com_github_pingcap_errors//:errors",
         "@com_github_stretchr_testify//require",
+        "@org_uber_go_goleak//:goleak",
     ],
 )
