--- a/expression/BUILD.bazel
+++ b/expression/BUILD.bazel
@@ -16,6 +16,7 @@ go_library(
         "builtin_convert_charset.go",
         "builtin_encryption.go",
         "builtin_encryption_vec.go",
+        "builtin_geo.go",
         "builtin_info.go",
         "builtin_info_vec.go",
         "builtin_json.go",
@@ -108,6 +109,10 @@ go_library(
         "@com_github_pingcap_failpoint//:failpoint",
         "@com_github_pingcap_tipb//go-tipb",
         "@com_github_tikv_client_go_v2//oracle",
+        "@com_github_twpayne_go_geom//:go-geom",
+        "@com_github_twpayne_go_geom//encoding/wkb",
+        "@com_github_twpayne_go_geom//encoding/wkt",
+        "@com_github_twpayne_go_geom//xy",
         "@org_golang_x_exp//slices",
         "@org_golang_x_tools//container/intsets",
         "@org_uber_go_atomic//:atomic",
