--- a/sessionctx/variable/BUILD.bazel
+++ b/sessionctx/variable/BUILD.bazel
@@ -88,6 +88,7 @@ go_test(
         "//config",
         "//kv",
         "//parser",
+        "//util/chunk",
         "//parser/auth",
         "//parser/mysql",
         "//parser/terror",
