--- a/expression/BUILD.bazel
+++ b/expression/BUILD.bazel
@@ -140,6 +140,7 @@ go_test(
         "builtin_control_vec_generated_test.go",
         "builtin_encryption_test.go",
         "builtin_encryption_vec_test.go",
+        "builtin_geo_test.go",
         "builtin_info_test.go",
         "builtin_info_vec_test.go",
         "builtin_json_test.go",
