--- a/extension/BUILD.bazel
+++ b/extension/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
         "function.go",
         "manifest.go",
         "registry.go",
+        "session.go",
         "util.go",
     ],
     importpath = "github.com/pingcap/tidb/extension",
