--- a/br/pkg/checkpoint/BUILD.bazel
+++ b/br/pkg/checkpoint/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
     deps = [
         "//br/pkg/errors",
         "//br/pkg/metautil",
+        "//br/pkg/rtree",
         "//br/pkg/storage",
         "@com_github_pingcap_errors//:errors",
         "@com_github_pingcap_kvproto//pkg/brpb",
