--- a/util/servermemorylimit/BUILD.bazel
+++ b/util/servermemorylimit/BUILD.bazel
@@ -18,6 +18,8 @@ go_test(
     name = "servermemorylimit_test",
     srcs = ["servermemorylimit_test.go"],
     embed = [":servermemorylimit"],
+    flaky = True,
+    race = "on",
     deps = [
         "//types",
         "//util",
