--- a/privilege/privileges/BUILD.bazel
+++ b/privilege/privileges/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
         "cache.go",
         "errors.go",
         "privileges.go",
+        "tidb_auth_token.go",
     ],
     importpath = "github.com/pingcap/tidb/privilege/privileges",
     visibility = ["//visibility:public"],
@@ -30,8 +31,10 @@ go_library(
         "//util/sem",
         "//util/sqlexec",
         "//util/stringutil",
-        "@com_github_lestrrat_go_jwx_v2//jwt:go_default_library",
-        "@com_github_lestrrat_go_jwx_v2//jwt/openid:go_default_library",
+        "@com_github_lestrrat_go_jwx_v2//jwk",
+        "@com_github_lestrrat_go_jwx_v2//jws",
+        "@com_github_lestrrat_go_jwx_v2//jwt",
+        "@com_github_lestrrat_go_jwx_v2//jwt/openid",
         "@com_github_pingcap_errors//:errors",
         "@org_golang_x_exp//slices",
         "@org_uber_go_zap//:zap",
