Prepare for test

--- a/privilege/privileges/BUILD.bazel
+++ b/privilege/privileges/BUILD.bazel
@@ -48,11 +48,12 @@ go_test(
         "cache_test.go",
         "main_test.go",
         "privileges_test.go",
+        "tidb_auth_token_test.go",
     ],
+    embed = [":privileges"],
     flaky = True,
     shard_count = 50,
     deps = [
-        ":privileges",
         "//config",
         "//errno",
         "//executor",
@@ -71,6 +72,7 @@ go_test(
         "//util",
         "//util/sem",
         "//util/sqlexec",
+        "@com_github_lestrrat_go_jwx_v2//jwk",
         "@com_github_stretchr_testify//require",
         "@org_uber_go_goleak//:goleak",
     ],
