update bazel dep
Signed-off-by: Weizhen Wang <wangweizhen@pingcap.com>

--- a/privilege/privileges/BUILD.bazel
+++ b/privilege/privileges/BUILD.bazel
@@ -31,10 +31,10 @@ go_library(
         "//util/sem",
         "//util/sqlexec",
         "//util/stringutil",
-        "@com_github_lestrrat_go_jwx_v2//jwk:go_default_library",
-        "@com_github_lestrrat_go_jwx_v2//jws:go_default_library",
-        "@com_github_lestrrat_go_jwx_v2//jwt:go_default_library",
-        "@com_github_lestrrat_go_jwx_v2//jwt/openid:go_default_library",
+        "@com_github_lestrrat_go_jwx_v2//jwk",
+        "@com_github_lestrrat_go_jwx_v2//jws",
+        "@com_github_lestrrat_go_jwx_v2//jwt",
+        "@com_github_lestrrat_go_jwx_v2//jwt/openid",
         "@com_github_pingcap_errors//:errors",
         "@org_golang_x_exp//slices",
         "@org_uber_go_zap//:zap",
@@ -72,11 +72,11 @@ go_test(
         "//util",
         "//util/sem",
         "//util/sqlexec",
-        "@com_github_lestrrat_go_jwx_v2//jwa:go_default_library",
-        "@com_github_lestrrat_go_jwx_v2//jwk:go_default_library",
-        "@com_github_lestrrat_go_jwx_v2//jws:go_default_library",
-        "@com_github_lestrrat_go_jwx_v2//jwt:go_default_library",
-        "@com_github_lestrrat_go_jwx_v2//jwt/openid:go_default_library",
+        "@com_github_lestrrat_go_jwx_v2//jwa",
+        "@com_github_lestrrat_go_jwx_v2//jwk",
+        "@com_github_lestrrat_go_jwx_v2//jws",
+        "@com_github_lestrrat_go_jwx_v2//jwt",
+        "@com_github_lestrrat_go_jwx_v2//jwt/openid",
         "@com_github_stretchr_testify//require",
         "@org_uber_go_goleak//:goleak",
     ],
