--- a/util/gpool/BUILD.bazel
+++ b/util/gpool/BUILD.bazel
@@ -6,7 +6,10 @@ go_library(
         "command.go",
         "gpool.go",
         "spinlock.go",
+        "task.go",
+        "task_manage.go",
     ],
     importpath = "github.com/pingcap/tidb/util/gpool",
     visibility = ["//visibility:public"],
+    deps = ["@org_golang_x_sys//cpu"],
 )
