--- a/executor/autoidtest/BUILD.bazel
+++ b/executor/autoidtest/BUILD.bazel
@@ -2,6 +2,8 @@ load("@io_bazel_rules_go//go:def.bzl", "go_test")
 
 go_test(
     name = "autoidtest_test",
+    flaky = True,
+    race = "on",
     srcs = [
         "autoid_test.go",
         "main_test.go",
