--- a/sessionctx/variable/BUILD.bazel
+++ b/sessionctx/variable/BUILD.bazel
@@ -99,6 +99,7 @@ go_test(
         "//types",
         "//util/chunk",
         "//util/execdetails",
+        "//util/gctuner",
         "//util/memory",
         "//util/mock",
         "@com_github_pingcap_failpoint//:failpoint",
