--- a/executor/BUILD.bazel
+++ b/executor/BUILD.bazel
@@ -195,6 +195,7 @@ go_library(
         "//util/tls",
         "//util/topsql",
         "//util/topsql/state",
+        "//util/validate-password",
         "@com_github_burntsushi_toml//:toml",
         "@com_github_gogo_protobuf//proto",
         "@com_github_ngaut_pools//:pools",
