--- a/executor/BUILD.bazel
+++ b/executor/BUILD.bazel
@@ -416,6 +416,7 @@ go_test(
         "//util/tableutil",
         "//util/timeutil",
         "//util/topsql/state",
+        "//util/validate-password",
         "@com_github_golang_protobuf//proto",
         "@com_github_gorilla_mux//:mux",
         "@com_github_jarcoal_httpmock//:httpmock",
