--- a/sessionctx/variable/BUILD.bazel
+++ b/sessionctx/variable/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
         "error.go",
         "mock_globalaccessor.go",
         "noop.go",
+        "password_dictionary.go",
         "removed.go",
         "sequence_state.go",
         "session.go",
@@ -43,6 +44,7 @@ go_library(
         "//util/disk",
         "//util/execdetails",
         "//util/gctuner",
+        "//util/hack",
         "//util/kvcache",
         "//util/logutil",
         "//util/mathutil",
@@ -57,7 +59,6 @@ go_library(
         "//util/timeutil",
         "//util/tls",
         "//util/topsql/state",
-        "//util/validate-password",
         "//util/versioninfo",
         "@com_github_pingcap_errors//:errors",
         "@com_github_tikv_client_go_v2//config",
@@ -77,6 +78,7 @@ go_test(
     srcs = [
         "main_test.go",
         "mock_globalaccessor_test.go",
+        "password_dictionary_test.go",
         "removed_test.go",
         "session_test.go",
         "statusvar_test.go",
