--- a/executor/BUILD.bazel
+++ b/executor/BUILD.bazel
@@ -177,6 +177,7 @@ go_library(
         "//util/mathutil",
         "//util/memory",
         "//util/mvmap",
+        "//util/password-validation",
         "//util/pdapi",
         "//util/plancodec",
         "//util/printer",
@@ -406,6 +407,7 @@ go_test(
         "//util/memory",
         "//util/mock",
         "//util/paging",
+        "//util/password-validation",
         "//util/pdapi",
         "//util/plancodec",
         "//util/ranger",
