--- a/expression/BUILD.bazel
+++ b/expression/BUILD.bazel
@@ -97,6 +97,7 @@ go_library(
         "//util/mathutil",
         "//util/mock",
         "//util/parser",
+        "//util/password-validation",
         "//util/plancodec",
         "//util/printer",
         "//util/sem",
@@ -220,6 +221,7 @@ go_test(
         "//util/hack",
         "//util/mathutil",
         "//util/mock",
+        "//util/password-validation",
         "//util/printer",
         "//util/sem",
         "//util/sqlexec",
