--- a/sessionctx/variable/BUILD.bazel
+++ b/sessionctx/variable/BUILD.bazel
@@ -99,10 +99,12 @@ go_test(
         "//testkit",
         "//testkit/testsetup",
         "//types",
+        "//util",
         "//util/chunk",
         "//util/execdetails",
         "//util/memory",
         "//util/mock",
+        "@com_github_pingcap_errors//:errors",
         "@com_github_pingcap_failpoint//:failpoint",
         "@com_github_stretchr_testify//require",
         "@com_github_tikv_client_go_v2//util",
