--- a/util/password-validation/BUILD.bazel
+++ b/util/password-validation/BUILD.bazel
@@ -8,7 +8,6 @@ go_library(
     deps = [
         "//sessionctx/variable",
         "//util/hack",
-        "@com_github_pingcap_errors//:errors",
     ],
 )
 
@@ -17,6 +16,7 @@ go_test(
     srcs = ["password_validation_test.go"],
     embed = [":password-validation"],
     deps = [
+        "//parser/auth",
         "//sessionctx/variable",
         "@com_github_stretchr_testify//require",
     ],
