make bazel_prepare

--- a/executor/autoidtest/BUILD.bazel
+++ b/executor/autoidtest/BUILD.bazel
@@ -13,6 +13,7 @@ go_test(
         "//ddl/testutil",
         "//meta/autoid",
         "//parser/mysql",
+        "//session",
         "//sessionctx/variable",
         "//testkit",
         "//testkit/testutil",
