--- a/ddl/BUILD.bazel
+++ b/ddl/BUILD.bazel
@@ -169,6 +169,7 @@ go_test(
         "fail_test.go",
         "foreign_key_test.go",
         "index_change_test.go",
+        "index_cop_test.go",
         "index_merge_tmp_test.go",
         "index_modify_test.go",
         "integration_test.go",
