--- a/.github/licenserc.yml
+++ b/.github/licenserc.yml
@@ -40,4 +40,5 @@ header:
     - "tidb-binlog/proto/go-binlog/secondary_binlog.pb.go"
     - "**/*.sql"
     - ".bazelversion"
+    - ".bazelignore"
   comment: on-failure
