make bazel_prepare
Signed-off-by: Leavrth <jianjun.liao@outlook.com>

--- a/br/pkg/checkpoint/BUILD.bazel
+++ b/br/pkg/checkpoint/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
         "//br/pkg/metautil",
         "//br/pkg/rtree",
         "//br/pkg/storage",
+        "//br/pkg/summary",
         "//br/pkg/utils",
         "@com_github_pingcap_errors//:errors",
         "@com_github_pingcap_kvproto//pkg/brpb",
