--- a/br/pkg/restore/BUILD.bazel
+++ b/br/pkg/restore/BUILD.bazel
@@ -129,6 +129,7 @@ go_test(
         "//br/pkg/metautil",
         "//br/pkg/mock",
         "//br/pkg/pdutil",
+        "//br/pkg/restore/mocking",
         "//br/pkg/restore/split",
         "//br/pkg/restore/tiflashrec",
         "//br/pkg/rtree",
@@ -150,6 +151,7 @@ go_test(
         "//types",
         "//util/codec",
         "@com_github_fsouza_fake_gcs_server//fakestorage",
+        "@com_github_golang_mock//gomock",
         "@com_github_golang_protobuf//proto",
         "@com_github_pingcap_errors//:errors",
         "@com_github_pingcap_failpoint//:failpoint",
