--- a/session/BUILD.bazel
+++ b/session/BUILD.bazel
@@ -124,6 +124,7 @@ go_test(
     data = glob(["testdata/**"]),
     embed = [":session"],
     flaky = True,
+    race = "on",
     shard_count = 50,
     deps = [
         "//bindinfo",
