--- a/errors.toml
+++ b/errors.toml
@@ -1461,6 +1461,11 @@ error = '''
 Foreign key cascade delete/update exceeds max depth of %v.
 '''
 
+["executor:3016"]
+error = '''
+The password for anonymous user cannot be expired.
+'''
+
 ["executor:3523"]
 error = '''
 Unknown authorization ID %.256s
