--- a/errors.toml
+++ b/errors.toml
@@ -456,6 +456,11 @@ error = '''
 update pd error
 '''
 
+["Lightning:PreCheck:ErrCheckCDCPiTR"]
+error = '''
+check TiCDC/PiTR task error
+'''
+
 ["Lightning:PreCheck:ErrCheckCSVHeader"]
 error = '''
 check csv header error
