--- a/ttl/BUILD.bazel
+++ b/ttl/BUILD.bazel
@@ -3,17 +3,24 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 go_library(
     name = "ttl",
     srcs = [
+        "session.go",
         "sql.go",
         "table.go",
     ],
     importpath = "github.com/pingcap/tidb/ttl",
     visibility = ["//visibility:public"],
     deps = [
+        "//kv",
         "//parser/ast",
         "//parser/format",
         "//parser/model",
         "//parser/mysql",
+        "//parser/terror",
+        "//sessionctx",
+        "//sessionctx/variable",
+        "//table/tables",
         "//types",
+        "//util/chunk",
         "//util/sqlexec",
         "@com_github_pingcap_errors//:errors",
         "@com_github_pkg_errors//:errors",
@@ -25,6 +32,7 @@ go_test(
     srcs = [
         "main_test.go",
         "sql_test.go",
+        "table_test.go",
     ],
     flaky = True,
     deps = [
