--- a/ttl/BUILD.bazel
+++ b/ttl/BUILD.bazel
@@ -31,12 +31,13 @@ go_test(
     name = "ttl_test",
     srcs = [
         "main_test.go",
+        "session_test.go",
         "sql_test.go",
         "table_test.go",
     ],
+    embed = [":ttl"],
     flaky = True,
     deps = [
-        ":ttl",
         "//kv",
         "//parser",
         "//parser/ast",
@@ -46,6 +47,7 @@ go_test(
         "//testkit/testsetup",
         "//types",
         "//util/sqlexec",
+        "@com_github_pingcap_errors//:errors",
         "@com_github_stretchr_testify//require",
         "@org_uber_go_goleak//:goleak",
     ],
