br: upgrade temporary system table
Signed-off-by: zhanggaoming <gaoming.zhang@pingcap.com>

--- a/br/pkg/gluetidb/BUILD.bazel
+++ b/br/pkg/gluetidb/BUILD.bazel
@@ -9,16 +9,20 @@ go_library(
         "//br/pkg/glue",
         "//br/pkg/gluetikv",
         "//br/pkg/logutil",
+        "//br/pkg/utils",
         "//config",
         "//ddl",
         "//domain",
         "//executor",
         "//kv",
         "//meta/autoid",
+        "//parser",
+        "//parser/ast",
         "//parser/model",
         "//parser/mysql",
         "//session",
         "//sessionctx",
+        "//util/chunk",
         "@com_github_pingcap_errors//:errors",
         "@com_github_pingcap_log//:log",
         "@com_github_tikv_pd_client//:client",
