modified:   errno/errname.go 	modified:   errors.toml 	modified:   privilege/privilege.go 	modified:   privilege/privileges/privileges.go 	modified:   session/session.go

--- a/errors.toml
+++ b/errors.toml
@@ -2258,7 +2258,7 @@ error = '''
 
 ["privilege:3957"]
 error = '''
-Access denied for user '%s'@'%s'. Account is blocked for %d day(s) (%d day(s) remaining) due to %d consecutive failed logins.
+Access denied for user '%s'@'%s'. Account is blocked for %s day(s) (%s day(s) remaining) due to %d consecutive failed logins.
 '''
 
 ["schema:1007"]
